@@ -1,3 +1,8 @@
+2006-11-16  Stephen Deasey  <sdeasey@users.sf.net>
+
+	* nsd/tcltime.c: Remove excessive check for shared object when
+	converting internal rep of time type.
+
 2006-11-14  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* tcl/sendmail.tcl: Fixed the bug or weird behaviour when sending big 
